--- a/_manuscript/_tex/references.bib
+++ b/_manuscript/_tex/references.bib
@@ -1,3 +1,11 @@
+@Article{multiverse,
+    title = {multiverse: Multiplexing Alternative Data Analyses in R Notebooks (Version 0.6.2)},
+    author = {Abhraneel Sarma and Alex Kale and Michael Moon and Nathan Taback and Fanny Chevalier and Jessica Hullman and Matthew Kay},
+    year = {2021},
+    url = {https://github.com/MUCollective/multiverse},
+    journal = {OSF Preprints},
+ }
+
 @Manual{ellmer,
    title = {ellmer: Chat with Large Language Models},
    author = {Hadley Wickham and Joe Cheng and Aaron Jacobs},
@@ -209,6 +217,23 @@ Publisher: Sigma XI-The Scientific Research Society},
 	url = {https://dl.acm.org/doi/10.1145/3313831.3376533},
 	address = {New York, NY, USA}
 }
+
+
+@article{liu_understanding_2020,
+	title = {Understanding the {Role} of {Alternatives} in {Data} {Analysis} {Practices}},
+	volume = {26},
+	issn = {1941-0506},
+	url = {https://ieeexplore.ieee.org/document/8805460/},
+	doi = {10.1109/TVCG.2019.2934593},
+	number = {1},
+	urldate = {2025-05-20},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	author = {Liu, Jiali and Boukhelifa, Nadia and Eagan, James R.},
+	month = jan,
+	year = {2020},
+	pages = {66--76},
+}
+
 
 @inproceedings{beltagy2019,
 	title = {Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
